--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon ./src/server.js",
     "biuld": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js",
-    "vercel-build": "npx prisma migrate deploy"
+    "vercel-build": "npx sequelize db:migrate deploy"
   },
   "keywords": [],
   "author": "",
